<resources>
    <string name="app_name">ArogyaPath</string>
    <string name="_24x7_healthcare">Health is Wealth!</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="Login">login</string>
    <string name="register_for_new_user">Register For New User</string>
    <string name="registration">Registration</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="lab_test">LAB TEST</string>
    <string name="buy_medicine">BUY MEDICINE</string>
    <string name="find_doctor">FIND DOCTOR</string>
    <string name="health_articles">HEALTH ARTICLES</string>
    <string name="order_details">ORDER DETAILS</string>
    <string name="log_out">LOG OUT</string>
    <string name="top_doctors">Top Doctors</string>
    <string name="family_physicians">FAMILY PHYSICIANS</string>
    <string name="dietitian">DIETITIAN</string>
    <string name="dentist">DENTIST</string>
    <string name="surgeon">SURGEON</string>
    <string name="cardiologist">CARDIOLOGIST</string>
    <string name="back">BACK</string>
    <string name="family_physician">Family Physician</string>
    <string name="default_text">Default Text</string>
    <string name="textview">TextView</string>
    <string name="book_appintment">Book Appointment</string>
    <string name="_10_00">10:00</string>
    <string name="fees">Fees</string>
    <string name="_28_10_2022">28/10/2022</string>
    <string name="select_date">Select Date</string>
    <string name="address">Address</string>
    <string name="contact_number">Contact Number</string>
    <string name="select_time">Select Time</string>
    <string name="full_name">Full Name</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="deliver_location_kolhoapur">Deliver Location : Kolhoapur</string>
    <string name="go_to_cart">Go To Cart</string>
    <string name="lab_test_and_package">Lab Test and Package</string>
    <string name="deliver_location_kolhapur">Deliver Location : Kolhapur</string>
    <string name="hi_nhello">HI \nHello</string>
    <string name="checkout">CHECKOUT</string>
    <string name="total_cost_1298">Total Cost : 1298/-</string>
    <string name="select_time1">Select Time</string>
    <string name="please_fill_all_details_for_booking">Please Fill All Details for Booking</string>
    <string name="full_name1">Full Name</string>
    <string name="address1">Address</string>
    <string name="pin_code">Pin Code</string>
    <string name="contact_number1">Contact Number</string>
    <string name="book">Book</string>
    <string name="order_details1">ORDER DETAILS</string>
    <string name="buy_medicine1">Buy Medicines</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="select_deliver_date">Select Deliver Date</string>

</resources>